[metadata]
license_file = LICENSE

[pep8]
max-line-length = 120

[flake8]
# note: we ignore all 501s (line too long) anyway as they're taken care of by black
max-line-length = 79
ignore = E203, E402, W503, W504, F821, E501
per-file-ignores =
    __init__.py: F401, F403, F405
    ./hubconf.py: F401
    test/smoke_test.py: F401
    test/smoke_test_deps.py: F401
    test_*.py: F841, E731, E266
exclude = venv

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring
