[metadata]
license_file = LICENSE

[pep8]
max-line-length = 120

[flake8]
# note: we ignore all 501s (line too long) anyway as they're taken care of by black
max-line-length = 79
ignore = E203, E402, W503, W504, E501, E231
per-file-ignores =
    __init__.py: F401, F403, F405
    ./hubconf.py: F401
    test/smoke_test.py: F401
    test/smoke_test_deps.py: F401
    test_*.py: F841, E731, E266
    test/opengl_rendering.py: F401
    test/test_modules.py: F841, E731, E266, TOR101
    test/test_tensordictmodules.py: F841, E731, E266, TOR101
    torchrl/objectives/cql.py: TOR101
    torchrl/objectives/deprecated.py: TOR101
    torchrl/objectives/iql.py: TOR101
    torchrl/objectives/redq.py: TOR101
    torchrl/objectives/sac.py: TOR101
    torchrl/objectives/td3.py: TOR101
    torchrl/objectives/value/advantages.py: TOR101
    tutorials/*/**.py: T001, T201
    scripts/*: T001, T201
    examples/*.py: T001, T201
    packaging/verify_nightly_version.py: T001, T201
    test/opengl_rendering.py: T001, T201
    */**/run-clang-format.py: T001, T201
    packaging/*/**.py: T001, T201
    .github/unittest/linux_sota/scripts/test_sota.py: T001
    .github/scripts/*.py: T001, T201
    .github/unittest/helpers/*.py: T001, T201
    docs/source/conf.py: T001
    test/test_libs.py: T001
    torchrl/_utils.py: T002

exclude = venv
extend-select = B901, C401, C408, C409, TOR0, TOR1, TOR2

[pydocstyle]
;select = D417 # Missing argument descriptions in the docstring
;inherit = false
match = .*\.py
;match_dir = ^(?!(.circlecli|test)).*
convention = google
add-ignore = D100, D104, D105, D107, D102
ignore-decorators =
    test_*
;    test/*.py
;    .circleci/*

[autoflake]
per-file-ignores =
    torchrl/trainers/helpers/envs.py *
